kubernetes/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banka-1-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: banka-1-prod
