kubernetes/fetching-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fetching-service
  namespace: banka-1-dev
  labels:
    service: fetching-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: fetching-service
  template:
    metadata:
      labels:
        service: fetching-service
    spec:
      containers:
        - image: harbor.k8s.elab.rs/banka-1/fetching-service:latest
          imagePullPolicy: Always
          name: fetching-service
          resources:
            requests:
              cpu: 1
              memory: 1Gi
            limits:
              cpu: 2
              memory: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: fetching-service
  namespace: banka-1-dev
spec:
  selector:
    service: fetching-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
