kubernetes/market-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-service
  namespace: banka-1-dev
  labels:
    service: market-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: market-service
  template:
    metadata:
      labels:
        service: market-service
    spec:
      containers:
        - image: harbor.k8s.elab.rs/banka-1/market-service:latest
          imagePullPolicy: Always
          name: market-service
          resources:
            requests:
              cpu: 1
              memory: 1Gi
            limits:
              cpu: 2
              memory: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: market-service
  namespace: banka-1-dev
spec:
  selector:
    service: market-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
