kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banka-1-ingress-frontend
  namespace: banka-1-dev
spec:
  ingressClassName: nginx
  rules:
    - host: "banka-1-dev.si.raf.edu.rs"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banka-1-ingress-api
  namespace: banka-1-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: "banka-1-dev.si.raf.edu.rs"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/user-service(/|$)(.*)"
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - pathType: ImplementationSpecific
            path: "/market-service(/|$)(.*)"
            backend:
              service:
                name: market-service
                port:
                  number: 8081
          - pathType: ImplementationSpecific
            path: "/fetching-service(/|$)(.*)"
            backend:
              service:
                name: fetching-service
                port:
                  number: 8082
